dnl // Process this file with autoconf to produce a configure script

AC_PREREQ(2.4)
AC_INIT(README)

AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_PATH_XTRA

PRIMARY_TARGET='sparse'
MAKELIB="ar rv \$@"
CLEAN="rm -rf"
CC="gcc"
CFLAGS="-c -Wall"

AC_SUBST(PRIMARY_TARGET)
AC_SUBST(MAKELIB)
AC_SUBST(CLEAN)
AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_OUTPUT(Makefile src/Makefile src/CommonLib/Makefile src/AppliLib/Makefile src/ParseLib/Makefile doc/Makefile tests/Makefile)
